--- a/Simple Search Engine/User menu/task-info.yaml
+++ b/Simple Search Engine/User menu/task-info.yaml
@@ -245,6 +245,31 @@ files:
     }
 
   learner_created: false
+- name: src/search/Person.java
+  visible: true
+  text: |
+    package search;
+
+    public class Person {
+        String firstName = "";
+        String lastName = "";
+        String email = "";
+
+        @Override
+        public String toString() {
+            return String.format("%s %s %s", firstName, lastName, email);
+        }
+    }
+  learner_created: true
+- name: src/search/MenuItem.java
+  visible: true
+  learner_created: true
+- name: src/search/Menu.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5498#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 13 Jun 2022 22:59:59 UTC
 record: -1
