--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/210158/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Mon, 13 Jun 2022 04:31:09 UTC
+update_date: Mon, 13 Jun 2022 19:31:22 UTC
 stages:
 - id: 354
   step: 5496
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 356
   step: 5498
-  is_completed: false
+  is_completed: true
 - id: 357
   step: 5499
   is_completed: false
