--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/210158/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Tue, 14 Jun 2022 14:15:01 UTC
+update_date: Wed, 15 Jun 2022 18:53:18 UTC
 stages:
 - id: 354
   step: 5496
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 358
   step: 5500
-  is_completed: false
+  is_completed: true
 - id: 359
   step: 5501
   is_completed: false
